[tool.poetry]
name = "ua"
version = "0.1.5"
description = "User-Agent parsing and creation"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/ua"
repository = "https://github.com/tombulled/ua"
documentation = "https://github.com/tombulled/ua"
keywords = ["python", "useragent", "ua"]

[tool.poetry.dependencies]
python = "^3.8"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
